--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -11,6 +11,18 @@
 
     <artifactId>utils</artifactId>
     <packaging>pom</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modules>
         <module>ttt</module>
     </modules>
